apps/base/git/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: git-svc
  namespace: git
spec:
  selector:
    app: git
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 22
      targetPort: 22
